[tool.poetry]
name = "amine"
version = "0.1.0"
description = ""
authors = ["datavorous <bhattacharjeesagnik910@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flaskwebgui = "^1.1.3"
flask = "^3.0.3"
pyautogui = "^0.9.54"
keyboard = "^0.13.5"
pygetwindow = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
