[tool.poetry]
name = "amine"
version = "0.1.0"
description = ""
authors = ["datavorous <bhattacharjeesagnik910@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.14,>=3.9"
flaskwebgui = "^1.1.3"
flask = "^3.0.3"
pyautogui = "^0.9.54"
keyboard = "^0.13.5"
pygetwindow = "^0.0.9"
db-sqlite3 = "^0.0.1"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
seaborn = "^0.13.2"
plyer = "^2.1.0"
plotly = "^5.24.1"
subprocess-run = "^0.0.8"
validators = "^0.34.0"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"